core.windows/test/unit/src/org/netbeans/core/windows/persistence/data/valid/Windows/Groups/group00.wsgrp
<?xml version="1.0" encoding="UTF-8"?>

<group version="2.0">
    <module name="org.netbeans.modules.form/2" spec="1.7" />
    <name unique="group00" />
    <state opened="true" />
</group>
