core.windows/test/unit/src/org/netbeans/core/windows/persistence/data/invalid/Windows/Groups/group03.wsgrp
<?xml version="1.0" encoding="UTF-8"?>

<group version="2.0">
    <name />
</group>
